# protein-function-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: ProteinDataset.py  Trainer.py  dataset_utils.py  hyperopt.py  trainscript.py
src/config/: config.yaml
src/models/: ProtTransClassifier.py  transformer.py
src/models/LSTM/: LSTM.py  best_model.keras  protein_family_classifier_final.h5
src/models/MLP/: MLP.py  ProteinMLP.py
src/notebooks/: LSTM_data.ipynb  ProtTrans_100class.ipynb  ProtTrans_5class.ipynb  best_model.h5  model_comparison.ipynb  protein_family_classifier_other.h5  tree_classifiers.ipynb
src/utils/: config.py  config.yaml  cross_validation.py  dataset_utils.py  plotting.py  training_utils.py
